# NiCoLS

./: CMakeLists.txt  README.md
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt  conf.py
include/nicols/: nicols.h
include/nicols/boundary/: boundary.h  dirichlet.h  nicols_bc.h
include/nicols/cases/: cases.h  nicols_case.h  poisson.h  unsteadyDiffusion.h
include/nicols/discretization/: discretization.h  finiteDifference.h  nicols_disc.h
include/nicols/grid/: grid.h  nicols_grid.h
include/nicols/linearAlgebra/: matrix.h  nicols_la.h
include/nicols/linearAlgebra/linearSolvers/: cg.h  gaussSeidel.h  linearSolver.h  sor.h
include/nicols/timeIntegration/: explicitEuler.h  nicols_ti.h  timeIntegrator.h
source/: nicols.cpp
source/boundary/: dirichlet.cpp
source/cases/: cases.cpp  poisson.cpp  unsteadyDiffusion.cpp
source/discretization/: finiteDifference.cpp
source/grid/: grid.cpp
source/linearAlgebra/linearSolvers/: cg.cpp  gaussSeidel.cpp  sor.cpp
source/timeIntegration/: explicitEuler.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: nicols.cpp
